pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: podsin
  namespace: dev
spec:
  containers:
  - name: mi-contenedor
    image: nginx
