NetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-database
  namespace: dev
spec:
  podSelector:
    matchLabes:
      role: db 
  ingress:
  - form:
    - podSelector:
      matchLabes:
      role: app
